package laboratorioxyz.com.ZoneControl.model.enums;

/**
 * Tipo de contrato laboral de un empleado.
 * Sirve para identificar la naturaleza de la relación contractual
 * y aplicar reglas administrativas o de vigencia (HU-25 ampliación).
 */
public enum ContractType {
    TIEMPO_COMPLETO,
    MEDIO_TIEMPO,
    TEMPORAL,
    CONTRATISTA,
    PRACTICANTE
}
