package laboratorioxyz.com.ZoneControl.model.enums;

/**
 * Tipos de documento de identidad colombianos válidos para registrar empleados.
 */
public enum DocumentType {
    CC,   // Cédula de Ciudadanía
    CE,   // Cédula de Extranjería
    TI,   // Tarjeta de Identidad
    PA,   // Pasaporte
    RC    // Registro Civil
}
