package laboratorioxyz.com.ZoneControl.model.enums;

public enum EmployeeStatus {
    ACTIVO,
    INACTIVO,
    SUSPENDIDO
}
