package laboratorioxyz.com.ZoneControl.model.enums;

/**
 * Roles del sistema para usuarios internos.
 * Define los permisos de acceso a cada módulo.
 */
public enum Role {
    ADMIN,
    GESTOR_PERSONAL,
    SUPERVISOR_AUDITOR
}
