package laboratorioxyz.com.ZoneControl.model.enums;

/**
 * Estado de cuenta de usuario o empleado.
 * ACTIVO: puede operar con normalidad.
 * INACTIVO: cuenta deshabilitada, no puede acceder.
 */
public enum UserStatus {
    ACTIVO,
    INACTIVO
}
