package laboratorioxyz.com.ZoneControl.model.enums;

/**
 * Turno/horario base asignado al empleado.
 * Se usa para identificar en qué jornada labora principalmente
 * y mostrarlo en la vista de detalle.
 */
public enum WorkShift {
    DIURNO,
    NOCTURNO,
    MIXTO
}
